fix: corrigindo camada view e refatorando o projeto